Fix header letter spacing

--- a/src/sass/templates/_main.scss
+++ b/src/sass/templates/_main.scss
@@ -223,10 +223,6 @@ h5 {
   font-weight: bold;
 }
 
-#h2-letter {
-  letter-spacing: 0.3rem;
-}
-
 .exp-content {
   text-align: center;
   font-size: 1.2rem;
